--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,7 +8,7 @@ body {
 
 header {
     background-color: #333;
-    color: #fff;
+    color: greenyellow;
     text-align: center;
     padding: 1em;
 }
